# aura-framework

./: .aura_dns_failures  .aura_state  .aura_vault_backup  .gitignore  AURA_ANTIGRAVITY_FIX_PROMPT.md  AURA_FIX_PLAN.md  AURA_MASTER_PROMPT.md  Dockerfile  LICENSE  README.md  airbnb_bundles.txt  airbnb_phase3_recon.json  analyze_js.py  api_extractor.py  arc_intel_full.txt  aura-ui.bat  aura.ps1  aura_auth.py  aura_auth_bot.py  aura_auth_cli.py  aura_bridge_extension.py  aura_burp_client.py  aura_chaos_test.py  aura_error.txt  aura_fix.bat  aura_fix.sh  aura_health.py  aura_intel_arc.txt  aura_main.py  aura_output.txt  aura_turbo_fuzzer.go  auth_uber.js  blockscout_env_header.py  brute_algo.py  brute_js.py  bucket_hunter.py  check.py  check_db.py  check_imports.py  check_imports_v2.py  (+232 more)
aura/: __init__.py  cli.py  cli_v2.py  out.txt  test_chaos.py  test_registry.py
data/: all_findings.txt  deep_search_results.txt  dump.txt  out.txt  targets_dump.txt  temp_out.txt
docs/: hackathon_submission_guide.md
nexus/: index.html  package.json  tailwind.config.js
nexus_zenith/: index.html  package-lock.json  package.json
plugins/: header_inspector.py
pocs/: poc_Broken_Access_Control_IDOR_intelcom.py
reports/: Zenith_Report_intel_com_Security_Vulnerability_20260307_034120.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034135.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034149.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034207.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034231.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034246.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034257.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034310.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034326.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034337.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034351.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034401.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034413.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034424.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034439.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034457.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034507.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034522.md  Zenith_Report_intel_com_Security_Vulnerability_20260307_034534.md  (+79 more)
(+282 files in other folders)
