[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-framework"
version = "25.0.0"
authors = [
  { name="Mutasem Kharma", email="mutasem@aura-project.io" },
]
description = "Aura v25.0 — The Omni-Sovereign Bug Bounty & Pentest Framework."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "click",
    "rich",
    "fastapi",
    "uvicorn",
    "playwright",
    "curl_cffi",
    "jinja2",
    "pydantic",
    "python-dotenv",
    "httpx",
]

[project.scripts]
aura = "aura.cli_v2:main"
aura-cli = "aura.cli_v2:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aura*"]
